--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@
 .hero-bg-img {
   background-image: url("https://res.cloudinary.com/dw8gdozpq/image/upload/v1653191832/Group_39665_jjltyz.png");
   background-repeat: no-repeat;
-  background-size: 100%;
+  background-size: 100% 100%;
 
   width: 100%;
   height: 700px;
@@ -49,7 +49,7 @@
 }
 .heading-1 {
   color: white;
-  font-size: 75px;
+  font-size: 80px;
   font-weight: 800;
   font-family: "Poppins";
 }
@@ -58,20 +58,22 @@
   padding-top: 5px;
 }
 .heading-2 {
-  color: white;
-  font-size: 75px;
+  color: transparent;
+  font-size: 80px;
   font-weight: 800;
   font-family: "Poppins";
+  -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: white;
 }
 .heading-3 {
   color: white;
-  font-size: xx-large;
+  font-size: 28px;
   padding-top: 10px;
 }
 .button-1 {
   margin-top: 10px;
   border-color: blue;
-  height: 45px;
+  height: 55px;
   width: 200px;
   color: white;
   font-size: 20px;
@@ -174,6 +176,7 @@
 }
 .reward-title {
   color: white;
+  padding-left: 76px;
   font-size: 60px;
   font-weight: 600;
   font-family: "Poppins";
@@ -212,7 +215,7 @@
 }
 .Breading-title {
   text-align: right;
-  padding-right: 50px;
+  padding-right: 200px;
   color: white;
   font-size: 70px;
   font-weight: 800;
@@ -249,8 +252,9 @@
 .Breading-heading {
   margin-left: 150px;
   color: white;
-  font-size: 40px;
-  word-spacing: 3px;
+  font-size: 50px;
+  font-weight: 500;
+  word-spacing: 1px;
   letter-spacing: 1px;
   font-family: "Poppins";
 }
@@ -259,7 +263,8 @@
   padding-bottom: 10px;
   margin-left: 150px;
   color: white;
-  font-size: 17px;
+  font-weight: 300;
+  font-size: 16px;
   font-family: "Poppins";
 }
 .Email-content {
